--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,19 @@
+# Dependencies
 node_modules/
 .cache/
-*.pack
-# Large binary files
-*.zip
-*.rar
-*.gz
-*.tar
-*.7z
-# Specific large files
-public/textures/brown_leather_4k.blend.zip
-# OS specific files
+
+# Production builds
+dist/
+build/
+
+# OS files
 .DS_Store
 Thumbs.db
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Environment variables
+.env
